implementação do banco de dados

--- a/LojaEstiloWeb/appsettings.json
+++ b/LojaEstiloWeb/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LojaConexao": "Server=DSKBCC20\\SQLEXPRESS;Database=lojinha;User Id=sa;Password=!Abc123;TrustServerCertificate=True;Encrypt=False;"
+  }
 }
