--- a/LojaEstiloWeb/appsettings.json
+++ b/LojaEstiloWeb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LojaConexao": "Server=DSKBCC20\\SQLEXPRESS;Database=lojinha;User Id=sa;Password=!Abc123;TrustServerCertificate=True;Encrypt=False;"
+  "LojaConexao": "Server=DSKBCC07\\SQLEXPRESS;Database=lojaTayna;User Id=sa;Password=!Abc123;TrustServerCertificate=True;Encrypt=False;"
   }
 }
